seperated Boilerplate header from gen codes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ include_directories(
   ${NDDSHOME}/include
   ${NDDSHOME}/include/ndds
   include
-  lib/gen
+  lib/boilerplate/Sensors
   lib/boilerplate
 )
 
@@ -37,57 +37,90 @@ elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "armv7l")
   link_directories(${NDDSHOME}/lib/armv6vfphLinux3.xgcc4.7.2)
 endif()
 
+add_library(Boilerplate_lib 
+  lib/boilerplate/Boilerplate.cpp
+)
+
+target_link_libraries(Boilerplate_lib 
+  nddsc    
+  nddscpp
+  nddscore
+  # ${CMAKE_DL_LIBS}  # ${CMAKE_DL_LIBS}
+)
+
 add_library(Sensors_lib 
-  lib/gen/Sensors.cxx
-  lib/gen/SensorsPlugin.cxx
-  lib/gen/SensorsSupport.cxx
+  lib/boilerplate/Sensors/Sensors.cxx
+  lib/boilerplate/Sensors/SensorsPlugin.cxx
+  lib/boilerplate/Sensors/SensorsSupport.cxx
 )
 
 target_link_libraries(Sensors_lib 
   nddsc    
   nddscpp
   nddscore
-  ${CMAKE_DL_LIBS}  # ${CMAKE_DL_LIBS}
-  
+  # ${CMAKE_DL_LIBS}  # ${CMAKE_DL_LIBS}
 )
 
-add_executable(publisher
-  lib/gen/Sensors_publisher.cxx
-)
+# add_executable(publisher
+#   lib/boilerplate/Sensors/Sensors_publisher.cxx
+# )
 
-target_link_libraries(publisher
-  Sensors_lib
-)
+# target_link_libraries(publisher
+#   Sensors_lib
+# )
 
-add_executable(subscriber
-  lib/gen/Sensors_subscriber.cxx
-)
+# add_executable(subscriber
+#   lib/boilerplate/Sensors/Sensors_subscriber.cxx
+# )
 
-target_link_libraries(subscriber
-  Sensors_lib
-)
+# target_link_libraries(subscriber
+#   Sensors_lib
+# )
 
 file(GLOB BOILERPLATE_SOURCE
-  lib/boilerplate/*.cpp
+  lib/boilerplate/Boilerplate.cpp
 )
 
 file(GLOB SENSORS_SOURCE 
-  lib/gen/Sensors.cxx
-  lib/gen/*Plugin.cxx
-  lib/gen/*Support.cxx
+  lib/boilerplate/Sensors/Sensors.cxx
+  lib/boilerplate/Sensors/*Plugin.cxx
+  lib/boilerplate/Sensors/*Support.cxx
+  lib/boilerplate/Sensors/*Boilerplate.cpp
 )
 
-add_executable(main
-  src/main.cpp
+
+# add_executable(main
+
+#   src/main.cpp
+ 
+# )
+
+# target_link_libraries(main 
+#   Sensors_lib
+
+#   Boilerplate_lib
+#   ${CMAKE_DL_LIBS}  # ${CMAKE_DL_LIBS}
+# )
+
+add_library(lib
   ${BOILERPLATE_SOURCE}
   ${SENSORS_SOURCE}
 )
 
-target_link_libraries(main 
+target_link_libraries(lib 
   nddsc    
   nddscpp
   nddscore
   ${CMAKE_DL_LIBS} 
+)
+
+
+add_executable(main
+  src/main.cpp
+)
+
+target_link_libraries(main 
+  lib
 )
 
 add_executable(twin
